// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SelectSearch component Renders with default props 1`] = `
<div
  className="select-search"
>
  <div
    className="select-search__value"
  >
    <input
      autoFocus={false}
      className="select-search__input"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={true}
      tabIndex="0"
      value=""
    />
  </div>
</div>
`;

exports[`Test SelectSearch component Renders with disabled 1`] = `
<div
  className="select-search"
>
  <div
    className="select-search__value"
  >
    <input
      autoFocus={false}
      className="select-search__input"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      readOnly={true}
      tabIndex="0"
      value=""
    />
  </div>
</div>
`;

exports[`Test SelectSearch component Renders with multiple 1`] = `
<div
  className="select-search select-search--multiple"
>
  <div
    className="select-search__select"
  >
    <ul
      className="select-search__options"
    >
      <li
        className="select-search__row"
        role="menuitem"
      >
        <button
          className="select-search__option"
          disabled={false}
          onMouseDown={[Function]}
          tabIndex="-1"
          value="foo"
        >
          Foo
        </button>
      </li>
      <li
        className="select-search__row"
        role="menuitem"
      >
        <button
          className="select-search__option"
          disabled={false}
          onMouseDown={[Function]}
          tabIndex="-1"
          value="bar"
        >
          Bar
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Test SelectSearch component Renders with search 1`] = `
<div
  className="select-search select-search--search"
>
  <div
    className="select-search__value"
  >
    <input
      autoFocus={false}
      className="select-search__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder={null}
      readOnly={false}
      tabIndex="0"
      value="Foo"
    />
  </div>
</div>
`;

exports[`Test SelectSearch component Renders with search and multiple 1`] = `
<div
  className="select-search select-search--multiple select-search select-search--multiple--search"
>
  <div
    className="select-search__value"
  >
    <input
      autoFocus={false}
      className="select-search__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder={null}
      readOnly={false}
      tabIndex="0"
      value=""
    />
  </div>
  <div
    className="select-search__select"
  >
    <ul
      className="select-search__options"
    >
      <li
        className="select-search__row"
        role="menuitem"
      >
        <button
          className="select-search__option"
          disabled={false}
          onMouseDown={[Function]}
          tabIndex="-1"
          value="foo"
        >
          Foo
        </button>
      </li>
      <li
        className="select-search__row"
        role="menuitem"
      >
        <button
          className="select-search__option"
          disabled={false}
          onMouseDown={[Function]}
          tabIndex="-1"
          value="bar"
        >
          Bar
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Test SelectSearch component Renders with search and placeholder 1`] = `
<div
  className="select-search select-search--search"
>
  <div
    className="select-search__value"
  >
    <input
      autoFocus={false}
      className="select-search__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder="Search..."
      readOnly={false}
      tabIndex="0"
      value=""
    />
  </div>
</div>
`;
